	* src/files.c (update_poshistory): Do not add directories to the
	list of file positions.  This fixes Savannah bug #46971.
	* src/*.c: Adjust some indentation and some line wrapping.
	* src/prompt.c (do_statusbar_prev_word): When in the middle of a
	word, jump to the start of the current word, not to the start of
	the preceding one.  This fixes Savannah bug #46970.

2016-01-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (update_poshistory): Handle an update of the first
	element correctly.
	* doc/texinfo/nano.texi: Document the --enable-altrcname option.
	The lack of this was pointed out by Frank.
	* doc/man/nano.1, doc/man/nanorc.5, doc/texinfo/nano.texi: Mention
	that the position history is limited to the 200 most recent files.

2016-01-24  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (update_poshistory): Move an updated item to the end
	of the list, so that it won't be dropped any time soon.  The problem
	was pointed out by David Niklas.
	* src/winio.c (edit_redraw): Condense by removing a triplication.
	* src/prompt.c (do_statusbar_prev_word, do_statusbar_next_word):
	Chop an always-FALSE parameter and delete an unused return value.
	* src/prompt.c (do_prompt): Remove a superfluous free.
	* src/prompt.c (update_the_bar): Bundle some statements.
	* src/prompt.c (need_statusbar_update): Elide this function.
	* src/prompt.c (total_statusbar_refresh): Elide this function too.

2016-01-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/utils.c (get_homedir): Don't use $HOME when we're root, because
	some sudos don't filter it out of the environment (which can lead to
	a root-owned .nano/ directory in the invoking user's home directory).
	It fixes https://bugs.launchpad.net/ubuntu/+source/nano/+bug/1471459.
	* src/files.c (read_line): Rename a variable for clarity and contrast.

2016-01-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/prompt.c (get_prompt_string): Preserve the cursor position on